--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+             "baseHref": "/your-repo-name/",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
