--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/angular20/",
               "budgets": [
                 {
                   "type": "initial",
