--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/angular20",
              "baseHref": "/angular20/",
             "browser": "src/main.ts",
             "polyfills": [
