--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
-
 name: Deploy Angular App to GitHub Pages
 
 on:
   push:
     branches:
-      - main
+      - main  # or your default branch
 
 permissions:
   contents: write
@@ -20,13 +19,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
 
       - name: Install dependencies
         run: npm install
 
       - name: Build Angular app
         run: npm run build -- --configuration production
+
+      - name: Add 404 fallback
+        run: cp dist/angular20/index.html dist/angular20/404.html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
